--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     
   grafana:
     image: grafana/grafana
-    volumes:
-      - ./data/grafana:/var/lib/grafana
+    # volumes:
+    #  - ./data/grafana:/var/lib/grafana
     ports:
       - 3000:3000
     depends_on:
