--- a/ecommerce/docker-compose.yaml
+++ b/ecommerce/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
             - app
 
     db:
-        image: mysql:5.6.50
+        image: mysql:5.7.42-debian
         command: --innodb-use-native-aio=0
         container_name: db
         restart: always
