--- a/ecommerce/docker-compose.yaml
+++ b/ecommerce/docker-compose.yaml
@@ -16,37 +16,37 @@ services:
         ports:
             - "9100:9100"
 
-        depends_on:
-            - db
-            - redis
+##        depends_on:
+##            - db
+##            - redis
 
-    nginx:
-        build: .docker/nginx
-        container_name: nginx
-        restart: always
-        tty: true
-        ports:
-            - "8080:80"
-        volumes:
-            - .:/var/www
-
-        depends_on:
-            - app
-
-    db:
-        image: mysql:5.7.42-debian
-        command: --innodb-use-native-aio=0
-        container_name: db
-        restart: always
-        tty: true
-        ports:
-            - "33006:3306"
-        volumes:
-            - ./.docker/dbdata:/var/lib/mysql
-        environment:
-            - MYSQL_DATABASE=laravel
-            - MYSQL_ROOT_PASSWORD=root
-            - MYSQL_USER=root
+##    nginx:
+##        build: .docker/nginx
+##        container_name: nginx
+##        restart: always
+##        tty: true
+##        ports:
+##            - "8080:80"
+##        volumes:
+##            - .:/var/www
+##
+##        depends_on:
+##            - app
+##
+##    db:
+##        image: mysql:5.7.42-debian
+##        command: --innodb-use-native-aio=0
+##        container_name: db
+##        restart: always
+##        tty: true
+##        ports:
+##            - "33006:3306"
+##        volumes:
+##            - ./.docker/dbdata:/var/lib/mysql
+##        environment:
+##            - MYSQL_DATABASE=laravel
+##            - MYSQL_ROOT_PASSWORD=root
+##            - MYSQL_USER=root
 
 
     redis:
