--- a/ecommerce/docker-compose.yaml
+++ b/ecommerce/docker-compose.yaml
@@ -49,10 +49,10 @@ services:
 ##            - MYSQL_USER=root
 
 
-    redis:
-        image: redis:alpine
-        expose:
-            - 6379
+##    redis:
+##        image: redis:alpine
+##        expose:
+##            - 6379
 
 
 networks:
