--- a/ecommerce/Dockerfile
+++ b/ecommerce/Dockerfile
@@ -15,14 +15,14 @@ RUN rm -rf /var/www/html
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-#COPY . /var/www
-#RUN composer install && \
-#            cp .env.example .env && \
-#            php artisan key:generate && \
-#            php artisan config:cache
+COPY . /var/www
+RUN composer install && \
+            cp .env.example .env && \
+            php artisan key:generate && \
+            php artisan config:cache
 
 
 RUN ln -s public html
 
-EXPOSE 8080
+# EXPOSE 8080
 ENTRYPOINT ["php-fpm"]
